--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -10,7 +10,7 @@ nav:
   #   - Self-Guided Learners: introduction-self-guided.md
   - Lab 1 Function Calling Power: lab-1-function_calling.md
   - Lab 2 Grounding with Documents: lab-2-file_search.md
-  - Lab 3 Intro to the Code Interpreter: lab-3-code_interpreter.md
+  - Lab 3 Intro to the Code Interpreter: lab-3-code_interpreter.mdF
   - Lab 4 Grounding with Bing Search: lab-4-bing_search.md
   - Lab 5 Multilingual Visualizations: lab-5-multilingual.md
   - Lab 6 Finishing Up: finishing-up.md
